simplify readme